<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cay.tempfifix.MainActivity"
    tools:showIn="@layout/activity_main">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sprint"
        android:onClick="jumpSprint"
        android:id="@+id/switchSprint" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmobile"
        android:onClick="jumpTMobile"
        android:id="@+id/switchTMobile"
        android:layout_below="@+id/switchSprint"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextcarrier"
        android:onClick="nextcarrier"
        android:id="@+id/nextcarrier"
        android:layout_below="@+id/switchTMobile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autoswitch"
        android:onClick="autoswitch"
        android:id="@+id/autoswitch"
        android:layout_below="@+id/nextcarrier"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repair"
        android:onClick="repair"
        android:id="@+id/repair"
        android:layout_below="@+id/autoswitch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cellinfo"
        android:onClick="launchCurrentInfo"
        android:id="@+id/info"
        android:layout_below="@+id/repair"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
